updated team pics

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
     font-size: 15px;
   }
   @media screen and (min-width:768px) {
-    .img-fluid {
+    <!-- .team-img {
       border-radius: 50%;
-    }
+    } -->
     .row {
       text-align: center !important;
     }
@@ -236,7 +236,7 @@
 
 <section class="bg-light container" style="padding-bottom: 3px;padding-top: 1px;">
   <div class="about text-center">
-      <h2 class="mb-5">Our Team<hr class="green-hr"></h2>
+      <h2 class="mb-5" data-aos="zoom-in-up" data-aos-easing="ease-in-sine" data-aos-delay="100">Our Team<hr class="green-hr"></h2>
   </div>
   <div class="container-fluid row" id="team" data-flickity='{ "wrapAround": true ,"autoPlay": 1500 }'>
       <!--Kuwarjeet singh card-->
@@ -244,7 +244,7 @@
           <div class=" container-fluid">
               <div class="">
                 <div class="">
-                  <img src="images/team/Yadaiah.jpg" alt="Kuwarjeet Singh" class='img-fluid'style="width:300px;height:350px;">
+                  <img src="images/team/Yadaiah.jpg" alt="Kuwarjeet Singh" class='img-fluid team-img'style="width:300px;height:350px;">
                   <h4 class="about-name">K.Yadaiah</h4>
                   <h6>President</h6>
                 </div>
@@ -256,7 +256,7 @@
           <div class=" container-fluid">
               <div class="">
                 <div class="">
-                  <img src="images/team/padmarao.jpg" class='img-fluid' alt="Harman arora" style="width:300px;height:350px;">
+                  <img src="images/team/padmarao.jpg" class='img-fluid team-img' alt="Harman arora" style="width:300px;height:350px;">
                   <h4 class="about-name">Padma Rao Mekala</h4>
                   <h6>Vice President</h6>
                 </div>
@@ -269,7 +269,7 @@
         <div class=" container-fluid">
             <div class="">
               <div class="">
-                <img src="images/team/K.Sathyanarayana.jpg" class='img-fluid' alt="Avleen Kaur" style="width:300px;height:350px;">
+                <img src="images/team/K.Sathyanarayana.jpg" class='img-fluid team-img' alt="Avleen Kaur" style="width:300px;height:350px;">
                 <h4 class="about-name">Sathyanarayana Kandi</h4>
                 <h6>General Secretary</h6>
               </div>
@@ -282,7 +282,7 @@
           <div class=" container-fluid">
               <div class="">
                 <div class="">
-                  <img src="images/team/K Saroja.jpg" class='img-fluid' alt="Yashvi parwani" style="width:300px;height:350px;">
+                  <img src="images/team/K Saroja.jpg" class='img-fluid team-img' alt="Yashvi parwani" style="width:300px;height:350px;">
                   <h4 class="about-name">Sarojana Kuntolla</h4>
                   <h6>Treasurer</h6>
                 </div>
@@ -295,7 +295,7 @@
           <div class=" container-fluid">
               <div class="">
                 <div class="">
-                  <img src="images/team/B venkatesham.jpg" class='img-fluid'alt="Bineet Singh" style="width:300px;height:350px;">
+                  <img src="images/team/B venkatesham.jpg" class='img-fluid team-img'alt="Bineet Singh" style="width:300px;height:350px;">
                   <h4 class="about-name">Venkatesham Battula</h4>
                   <h6>Joint Secretary</h6>
                 </div>
