--- a/index.html
+++ b/index.html
@@ -219,9 +219,6 @@
     font-size: 15px;
   }
   @media screen and (min-width:768px) {
-    <!-- .team-img {
-      border-radius: 50%;
-    } -->
     .row {
       text-align: center !important;
     }
@@ -230,6 +227,14 @@
     .carousel-cell {
       margin-top: 1rem;
       margin-bottom: 1rem;
+    }
+    .carousel-cell:nth-child(-n+5){
+      height: 400px !important;
+      width: 300px !important;
+    }
+    .team-img {
+      height: 300px !important;
+      width: 300px !important;
     }
   }
 </style>
